Apply suggestions from code review
Co-authored-by: Guido Grune <100089178+gg-dim@users.noreply.github.com>